# smarthome

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
.github/workflows/: build.yml
inc/: Controller.h  HttpConnection.h  IHttpConnection.h  IPresenceDetector.h  ISmartSink.h  ITimer.h  MonoLight.h  MqttConnection.h  PresenceDetector.h  RGBLight.h  SmarthomeConfig.h.in  Switch.h  Timer.h  command-line-parser.h  config.h  daemon.h  log.h
inc/base/: HttpConnection.h  IMqttConnection.h  MqttConnection.h  daemon.h  log.h
res/systemd/: smarthome.service
res/web/: site.html
src/: Controller.cpp  HttpConnection.cpp  MonoLight.cpp  MqttConnection.cpp  PresenceDetector.cpp  RGBLight.cpp  Switch.cpp  Timer.cpp  daemon.cpp  log.cpp  main.cpp
src/base/: HttpConnection.cpp  MqttConnection.cpp  log.cpp  main.cpp
